@@ -18,8 +18,7 @@ package docking.help;
 import java.awt.*;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
 import java.util.*;
 import java.util.List;
 import java.util.Map;
@@ -72,6 +71,7 @@ public class HelpManager implements HelpService {
 
 	private HashMap<URL, HelpSet> urlToHelpSets = new HashMap<>();
 	private Map<Object, HelpLocation> helpLocations = new WeakHashMap<>();
+	private Map<Object, DynamicHelpLocation> dynamicHelp = new WeakHashMap<>();
 
 	private List<HelpSet> helpSetsPendingMerge = new ArrayList<>();
 	private boolean hasMergedHelpSets;
@@ -100,6 +100,11 @@ public class HelpManager implements HelpService {
 	protected void registerHelp() {
 		mergePendingHelpSets();
 		Help.installHelpService(this);
+	}
+
+	@Override
+	public boolean isShowing() {
+		return mainHB.isDisplayed();
 	}
 
 	@Override
@@ -137,6 +142,14 @@ public class HelpManager implements HelpService {
 		return HOME_ID;
 	}
 
+	/**
+	 * Returns the master help set (the one into which all other help sets are merged).
+	 * @return the help set
+	 */
+	public GHelpSet getMasterHelpSet() {
+		return mainHS;
+	}
+
 	@Override
 	public void excludeFromHelp(Object helpObject) {
 		excludedFromHelp.add(helpObject);
@@ -151,6 +164,11 @@ public class HelpManager implements HelpService {
 	@Override
 	public void clearHelp(Object helpObject) {
 		helpLocations.remove(helpObject);
+	}
+
+	@Override
+	public void registerDynamicHelp(Object helpObject, DynamicHelpLocation helpLocation) {
+		dynamicHelp.put(helpObject, helpLocation);
 	}
 
 	@Override
@@ -197,15 +215,29 @@ public class HelpManager implements HelpService {
 
 	@Override
 	public HelpLocation getHelpLocation(Object helpObj) {
+		return doGetHelpLocation(helpObj);
+	}
+
+	private HelpLocation doGetHelpLocation(Object helpObj) {
+
+		DynamicHelpLocation dynamicLocation = dynamicHelp.get(helpObj);
+		if (dynamicLocation != null) {
+			HelpLocation hl = dynamicLocation.getActiveHelpLocation();
+			if (hl != null) {
+				return hl;
+			}
+		}
+
 		return helpLocations.get(helpObj);
 	}
 
-	/**
-	 * Returns the master help set (the one into which all other help sets are merged).
-	 * @return the help set
-	 */
-	public GHelpSet getMasterHelpSet() {
-		return mainHS;
+	private HelpLocation findHelpLocation(Object helpObj) {
+		if (helpObj instanceof HelpDescriptor) {
+			HelpDescriptor helpDescriptor = (HelpDescriptor) helpObj;
+			Object descriptorHelpObj = helpDescriptor.getHelpObject();
+			return doGetHelpLocation(descriptorHelpObj);
+		}
+		return doGetHelpLocation(helpObj);
 	}
 
 	@Override
@@ -330,9 +362,9 @@ public class HelpManager implements HelpService {
 		// To do this, try making a URL out of the help string and doing a reverse lookup
 		URL URL = null;
 		try {
-			URL = new URL(helpIDString);
+			URL = URI.create(helpIDString).toURL();
 		}
-		catch (MalformedURLException e) {
+		catch (IllegalArgumentException | MalformedURLException e) {
 			// nothing we can do, fall through the method to the previous exception
 		}
 
@@ -345,15 +377,6 @@ public class HelpManager implements HelpService {
 		}
 
 		throw helpException;
-	}
-
-	private HelpLocation findHelpLocation(Object helpObj) {
-		if (helpObj instanceof HelpDescriptor) {
-			HelpDescriptor helpDescriptor = (HelpDescriptor) helpObj;
-			Object helpObject = helpDescriptor.getHelpObject();
-			return helpLocations.get(helpObject);
-		}
-		return helpLocations.get(helpObj);
 	}
 
 	private String getFilenameForHelpLocation(HelpLocation helpLocation) {
@@ -523,20 +546,28 @@ public class HelpManager implements HelpService {
 	public Map<Object, HelpLocation> getInvalidHelpLocations(TaskMonitor monitor)
 			throws CancelledException {
 
+		Set<String> alreadySeen = new HashSet<>();
 		Map<Object, HelpLocation> map = new WeakHashMap<>();
 		Map<Object, HelpLocation> helpLocationsCopy = copyHelpLocations();
 		monitor.initialize(helpLocationsCopy.size());
 		Set<Entry<Object, HelpLocation>> entries = helpLocationsCopy.entrySet();
 		for (Entry<Object, HelpLocation> entry : entries) {
-			monitor.checkCancelled();
+			monitor.increment();
 
 			Object helpee = entry.getKey();
 			HelpLocation location = entry.getValue();
 			monitor.setMessage("Checking " + helpee);
-			if (!hasValidHelp(helpee, location)) {
-				map.put(helpee, location);
+			if (hasValidHelp(helpee, location)) {
+				continue;
 			}
-			monitor.incrementProgress(1);
+
+			String inception = location.getInceptionInformation();
+			if (alreadySeen.contains(inception)) {
+				continue; // don't show repeated errors for same line of code
+			}
+
+			alreadySeen.add(inception);
+			map.put(helpee, location);
 		}
 		return map;
 	}
@@ -788,7 +819,12 @@ public class HelpManager implements HelpService {
 			}
 		}
 		else {
-			buffy.append("<NO HELP AVAILABLE>");
+			if (isExcludedFromHelp(helpObj)) {
+				buffy.append("<EXCLUDED FROM HELP>");
+			}
+			else {
+				buffy.append("<NO HELP AVAILABLE>");
+			}
 		}
 
 		return buffy.toString();
