@@ -17,18 +17,23 @@ package ghidra.server.remote;
 
 import java.io.*;
 import java.net.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.rmi.registry.LocateRegistry;
 import java.rmi.registry.Registry;
 import java.security.KeyStore.PrivateKeyEntry;
-import java.util.ArrayList;
+import java.util.*;
 import java.util.function.Consumer;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
 import javax.rmi.ssl.SslRMIClientSocketFactory;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.RandomStringUtils;
 
+import db.buffers.DataBuffer;
+import generic.hash.HashUtilities;
 import generic.test.*;
 import ghidra.framework.Application;
 import ghidra.framework.client.*;
@@ -91,10 +96,13 @@ public class ServerTestUtil {
 
 	private static final int SERVER_STARTUP_MAXWAIT_MS = 20000;
 
+	public static boolean enableCompressionOnServerStart = true;
+
 	private static IOThread cmdOut;
 	private static IOThread cmdErr;
 	private static Process serverProcess;
 	private static String serverRepositories;
+	private static Path argsFile;
 
 	static {
 		Runtime.getRuntime().addShutdownHook(new ShutdownHook());
@@ -412,6 +420,9 @@ public class ServerTestUtil {
 			boolean enableAltLoginName, boolean enableSSHAuthentication,
 			boolean enableAnonymousAuthentication) throws IOException {
 
+		// Set client-side compression to match server
+		DataBuffer.enableCompressedSerializationOutput(enableCompressionOnServerStart);
+
 		if (port == 0) {
 			port = GHIDRA_TEST_SERVER_PORT;
 		}
@@ -424,28 +435,25 @@ public class ServerTestUtil {
 			"     Enable Anonymous Login: " + enableAnonymousAuthentication);
 
 		// Force client-side use of newly generated CA certificates
-		System.setProperty(ApplicationTrustManagerFactory.GHIDRA_CACERTS_PATH_PROPERTY,
+		System.setProperty(DefaultTrustManagerFactory.GHIDRA_CACERTS_PATH_PROPERTY,
 			getTestPkiCACertsPath());
-		SSLContextInitializer.initialize(true);
+		DefaultSSLContextInitializer.initialize(true);
 
-		ArrayList<String> argList = new ArrayList<>();
 		String javaCommand =
 			System.getProperty("java.home") + File.separator + "bin" + File.separator + "java";
-		argList.add(javaCommand);
 
+		List<String> argList = new ArrayList<>();
 		argList.add("-cp");
-		argList.add(System.getProperty("java.class.path"));
+		argList.add("\"" + System.getProperty("java.class.path").replace("\\", "/") + "\"");
 
 		argList.add("-Xmx512M");
 
-		argList.add("-Xdebug");
-		argList.add("-Xnoagent");
-		argList.add("-Djava.compiler=NONE");
-		argList.add("-D" + ApplicationTrustManagerFactory.GHIDRA_CACERTS_PATH_PROPERTY + "=" +
+		argList.add("-Ddb.buffers.DataBuffer.compressedOutput=" + enableCompressionOnServerStart);
+		argList.add("-D" + DefaultTrustManagerFactory.GHIDRA_CACERTS_PATH_PROPERTY + "=" +
 			getTestPkiCACertsPath());
-		argList.add("-D" + ApplicationKeyManagerFactory.KEYSTORE_PATH_PROPERTY + "=" +
+		argList.add("-D" + DefaultKeyManagerFactory.KEYSTORE_PATH_PROPERTY + "=" +
 			getTestPkiServerKeystorePath());
-		argList.add("-D" + ApplicationKeyManagerFactory.KEYSTORE_PASSWORD_PROPERTY + "=" +
+		argList.add("-D" + DefaultKeyManagerFactory.KEYSTORE_PASSWORD_PROPERTY + "=" +
 			TEST_PKI_SERVER_PASSPHRASE);
 		argList.add("-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:18202"); // *: for remote debug support
 		argList.add("-DSystemUtilities.isTesting=true");
@@ -475,25 +483,15 @@ public class ServerTestUtil {
 		argList.add("-p" + port);
 		argList.add(dirPath);
 
-		String[] args = new String[argList.size()];
-		argList.toArray(args);
-
-		System.out.println();
-		for (String arg : argList) {
-			boolean includeQuotes = arg.indexOf(' ') != -1;
-			if (includeQuotes) {
-				System.out.print("'");
-			}
-			System.out.print(arg);
-			if (includeQuotes) {
-				System.out.print("'");
-			}
-			System.out.print(" ");
-		}
-		System.out.println();
 
 		try {
-			serverProcess = Runtime.getRuntime().exec(args);
+			// Command line argument is too long on Windows, so use an @arg-file
+			argsFile =
+				Files.createTempFile(Application.getUserTempDirectory().toPath(), "args", ".txt");
+			Files.write(argsFile, argList);
+			System.out.println(javaCommand + " \"@" + argsFile + "\"");
+
+			serverProcess = new ProcessBuilder(javaCommand, "@" + argsFile).start();
 			serverRepositories = dirPath;
 
 			cmdOut = new IOThread(serverProcess.getInputStream());
@@ -527,8 +525,6 @@ public class ServerTestUtil {
 				Thread.sleep(200);
 				if (isServerRegistered(portFactory.getRMIRegistryPort()) &&
 					canConnect(portFactory.getRMISSLPort())) {
-					Msg.info(ServerTestUtil.class,
-						"Successfully verified Ghidra Server registration and SSL port availability");
 					success = true;
 					return;
 				}
@@ -622,7 +618,7 @@ public class ServerTestUtil {
 
 	public static synchronized void disposeServer() {
 
-		System.setProperty(ApplicationTrustManagerFactory.GHIDRA_CACERTS_PATH_PROPERTY, "");
+		System.setProperty(DefaultTrustManagerFactory.GHIDRA_CACERTS_PATH_PROPERTY, "");
 
 		if (serverProcess != null) {
 
@@ -652,8 +648,24 @@ public class ServerTestUtil {
 			serverRepositories = null;
 
 			if (testPkiDirectory != null) {
-				FileUtilities.deleteDir(testPkiDirectory);
-				testPkiDirectory = null;
+				try {
+					FileUtils.deleteDirectory(testPkiDirectory);
+				}
+				catch (IOException e) {
+					// Will likely be an error the next time the test starts
+					e.printStackTrace();
+				}
+				finally {
+					testPkiDirectory = null;
+				}
+			}
+		}
+		if (argsFile != null && Files.exists(argsFile)) {
+			try {
+				Files.delete(argsFile);
+			}
+			catch (IOException e) {
+				// don't care
 			}
 		}
 	}
@@ -939,23 +951,40 @@ public class ServerTestUtil {
 
 		// Generate CA certificate and keystore
 		Msg.info(ServerTestUtil.class, "Generating self-signed CA cert: " + caPath);
-		PrivateKeyEntry caEntry =
-			ApplicationKeyManagerUtils.createKeyEntry("test-CA", TEST_PKI_CA_DN, 2, null, null,
-				"PKCS12", null, ApplicationKeyManagerFactory.DEFAULT_PASSWORD.toCharArray());
-		ApplicationKeyManagerUtils.exportX509Certificates(caEntry.getCertificateChain(), caFile);
+		PrivateKeyEntry caEntry = PKIUtils.createKeyEntry("test-CA", TEST_PKI_CA_DN, 2, null, null,
+			"PKCS12", null, DefaultKeyManagerFactory.DEFAULT_PASSWORD.toCharArray());
+		PKIUtils.exportX509Certificates(caEntry.getCertificateChain(), caFile);
 
 		// Generate User/Client certificate and keystore
 		Msg.info(ServerTestUtil.class, "Generating test user key/cert (signed by test-CA, pwd: " +
 			TEST_PKI_USER_PASSPHRASE + "): " + userKeystorePath);
-		ApplicationKeyManagerUtils.createKeyEntry("test-sig", TEST_PKI_USER_DN, 2, caEntry,
-			userKeystoreFile, "PKCS12", null, TEST_PKI_USER_PASSPHRASE.toCharArray());
+		PKIUtils.createKeyEntry("test-sig", TEST_PKI_USER_DN, 2, caEntry, userKeystoreFile,
+			"PKCS12", null, TEST_PKI_USER_PASSPHRASE.toCharArray());
 
 		// Generate Server certificate and keystore
 		Msg.info(ServerTestUtil.class, "Generating test server key/cert (signed by test-CA, pwd: " +
 			TEST_PKI_SERVER_PASSPHRASE + "): " + serverKeystorePath);
 
-		ApplicationKeyManagerUtils.createKeyEntry("test-sig", TEST_PKI_SERVER_DN, 2, caEntry,
-			serverKeystoreFile, "PKCS12", null, TEST_PKI_SERVER_PASSPHRASE.toCharArray());
+		PKIUtils.createKeyEntry("test-sig", TEST_PKI_SERVER_DN, 2, caEntry, serverKeystoreFile,
+			"PKCS12", getLocalHostnames(), TEST_PKI_SERVER_PASSPHRASE.toCharArray());
+	}
+
+	private static Collection<String> getLocalHostnames() throws SocketException {
+
+		// Collect alternate hostnames for inclusion in certificate
+		Set<String> altNames = new TreeSet<>();
+		Enumeration<NetworkInterface> nets = NetworkInterface.getNetworkInterfaces();
+		while (nets.hasMoreElements()) {
+			NetworkInterface netint = nets.nextElement();
+			Enumeration<InetAddress> addrs = netint.getInetAddresses();
+			while (addrs.hasMoreElements()) {
+				InetAddress addr = addrs.nextElement();
+				altNames.add(addr.getHostAddress());
+				altNames.add(addr.getHostName());
+				altNames.add(addr.getCanonicalHostName());
+			}
+		}
+		return altNames;
 	}
 
 	/**
